--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -16,8 +16,8 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_label" msgid="2008319089248760277">"무선 긴급 경보"</string>
-    <string name="sms_cb_settings" msgid="9021266457863671070">"무선 긴급 경보"</string>
+    <string name="app_label" msgid="2008319089248760277">"재난문자"</string>
+    <string name="sms_cb_settings" msgid="9021266457863671070">"재난문자"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"이 사용자는 무선 긴급 경보 알림 설정을 사용할 수 없습니다."</string>
     <string name="button_dismiss" msgid="1234221657930516287">"확인"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"이전 경보 없음"</string>
