--- a/res/values-mcc234-ka/strings.xml
+++ b/res/values-mcc234-ka/strings.xml
@@ -16,12 +16,12 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="enable_cmas_extreme_threat_alerts_title" msgid="8511466399220042295">"ექსტრემალური გაფრთხილებები"</string>
+    <string name="enable_cmas_extreme_threat_alerts_title" msgid="8511466399220042295">"ექსტრემალური ვითარების გაფრთხილებები"</string>
     <string name="enable_cmas_severe_threat_alerts_title" msgid="2271741871998936543">"გაფრთხილებები მძიმე პირობების შესახებ"</string>
     <string name="enable_cmas_test_alerts_title" msgid="6022925848643811044">"სატესტო გაფრთხილებები"</string>
     <string name="enable_exercise_test_alerts_title" msgid="411880452689537935">"სავარჯიში გაფრთხილებები"</string>
     <string name="cmas_presidential_level_alert" msgid="3429191761649839884">"სამთავრობო გაფრთხილება"</string>
-    <string name="cmas_extreme_alert" msgid="3474352706075109113">"ექსტრემალური გაფრთხილება"</string>
+    <string name="cmas_extreme_alert" msgid="3474352706075109113">"ექსტრემალური ვითარების გაფრთხილება"</string>
     <!-- no translation found for cmas_extreme_immediate_observed_alert (4385654808873824465) -->
     <skip />
     <!-- no translation found for cmas_extreme_immediate_likely_alert (1667218798350595295) -->
